[package]
name = "rainbow"
version = "0.1.0"
edition = "2021"
authors = ["e1732a364fed"]
description = "A steganography tool that hides data in HTTP traffic"

[dependencies]
http = "0.2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
rand = "0.8"
rand_chacha = "0.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
mime = "0.3"
dyn-clone = "1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
fake = { version = "2", features = ["derive"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
generic-array = "0.14"
image = "0.24"
common_macros = "0.1"
hound = "3.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.8"
tracing-appender = "0.2"


[[bench]]
name = "bandwidth_analysis"
harness = false
