[package]
name = "rainbow"
version = "0.1.0"
edition = "2021"
authors = ["e1732a364fed"]
description = "A steganography tool that hides data in HTTP traffic"

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
anyhow = "1.0.77"
thiserror = "1.0.53"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
base64 = "0.21.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
chrono = "0.4.31"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mime = "0.3.17"
dyn-clone = "1.0.16"
bytes = "1.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
clap = { version = "4.4.11", features = ["derive"] }
regex = "1.10.2"
fake = { version = "2.9", features = ["derive"] }
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
generic-array = "0.14.7"
image = "0.24"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.8.0"
tracing-appender = "0.2.3"


[[bench]]
name = "bandwidth_analysis"
harness = false
