[package]
name = "rainbow"
version = "0.1.0"
edition = "2021"
authors = ["e1732a364fed"]
description = "A steganography tool that hides data in HTTP traffic"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
async-trait = "0.1.75"
anyhow = "1.0.77"
thiserror = "1.0.53"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
base64 = "0.21.5"
rand = "0.8.5"
chrono = "0.4.31"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mime = "0.3.17"
dyn-clone = "1.0.16"
futures = "0.3"
bytes = "1.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
clap = { version = "4.4.11", features = ["derive"] }
regex = "1.10.2"
